--- a/jekyll/_posts/2016-11-07-palantir.markdown
+++ b/jekyll/_posts/2016-11-07-palantir.markdown
@@ -11,6 +11,8 @@ Oprócz samych warsztatów zachęcamy was do spróbowania swoich sił i zgłosze
 
 [Event na facebooku](https://www.facebook.com/events/407938322926970)
 
+![Tak było!](/images/palantir-foto.jpg)
+
 Poniżej oryginalny opis:
 >
 > Today’s critical institutions don’t just protect public safety or provide vital goods and services - they also deal with astonishing amounts of data. At Palantir, we build software that lets organizations integrate and analyze their data to solve problems they couldn’t before. For example, we’re helping our customers combat terrorism at home and abroad, investigate and prosecute financial fraud rings, offer more credit to retail banking customers, manufacture products faster and more safely, and fight violent crime in the world’s great cities. And we’re just getting started.
