--- a/jekyll/_posts/2017-03-11-phoe.markdown
+++ b/jekyll/_posts/2017-03-11-phoe.markdown
@@ -7,4 +7,4 @@ language: pl
 ---
 Czy wiecie, że mamy w Kole ludzi na tyle zwariowanych, że programują w Lispie, pracują nad rozwojem tego języka i jeszcze w dodatku nie boją się pokazywać swojej pracę za granicą? Michał "phoe" Herda pracuje nad nowym projektem dokumentacji Lispa, zwanej Common Lisp UltraSpec (CLUS), napisał o niej *publikację naukową* i będzie prezentował ją na konferencji European Lisp Symposium 2017 w Brukseli! Dodatkowo odbędzie się tam wernisaż grafiki Michała z okazji 60-tych urodzin języka Lisp.
 
-Projekt CLUS znajdziecie [tutaj](http://phoe.tymoon.eu/clus/doku.php)
+Projekt CLUS znajdziecie [tutaj](http://phoe.tymoon.eu/clus/doku.php).
