Better SFI news

--- a/jekyll/_posts/2017-03-22-13sfi.markdown
+++ b/jekyll/_posts/2017-03-22-13sfi.markdown
@@ -6,10 +6,10 @@ post_img_url: /images/13sfi/plakat.jpg
 language:   pl
 ---
 
-13. Studencki Festiwal Informatyczny już za nami! Mimo przysłowiowej "pechowej trzynastki" ta edycja była rekordowa - osiągnęłą ponad **5500 odsłuchań** i zgromadziła wielu wybitnych prelegentów z branży IT.
+Za nami kolejna, 13. już edycja Studenckiego Festiwalu Informatycznego. Jak co roku pasjonaci najnowszych technologii zjechali się do Krakowa by przez trzy dni dyskutować o informatyce w czasie licznych wykładów i warsztatów. Nie zabrakło największych gwiazd IT - w tym roku Festiwal odwiedzili m.in. Thomas H. Cormen (współtwórca słynnego "Wprowadzenia do algorytmów"), Andrew S. Tanenbaum (twórca Minixa), Jerzy Grębosz (autor niezastąpionej Symfonii C++) czy Paweł Sasko (jeden z twórców Wiedźmina). Nie zabrakło również  konkursów - miłośnicy grywalizacji zbierali kody w grze SeekFINDInput, codziennie można było też wziąć udział w konkursie SFIcture of the day, w którym należało wykonać zdjęcie związane z motywem danego dnia. W sobotę odbył się również turniej gry Hearthstone, który organizowany był po raz pierwszy i okazał się strzałem w dziesiątkę.  
+    
+Poza zaplanowanymi wykładami i warsztatami, uczestnicy mogli skorzystać z oferty przygotowanej przez sponsorów. Wiele osób w przerwie pomiędzy kolejnymi atrakcjami korzystało ze strefy chillout rozwiązując łamigłówki i grając na konsoli.
 
-Gościliśmy między innymi Thomasa H. Cormena (współautora "Wprowadzenia do algorytmów"), Andrew S. Tanenbauma (twórcę systemu MINIX), Pawła Sasko (quest designer pracujący m. in. przy Wiedźminie 3) i Jerzego Grębosza (autora Symfonii C++).
+To wszystko sprawiło, że tegoroczna edycja okazała się rekordowa pod względem ilości uczestników - nasze wydarzenie odwiedziło ponad 5500 osób! Nie zatrzymujemy się jednak na tym i za rok liczymy na jeszcze więcej :) Razem z innymi współorganizatorami Kołem Naukowym BIT z AGH, Kołem Naukowym Informatyki UEK oraz Kołem Naukowym Informatyków PK już dziś zapraszamy na 14. edycję!
 
-Oprócz atrakcyjnych wykładów i warsztatów odwiedzający mogli rozejrzeć się za ofertami pracy na stanowiskach sponsorów Festiwalu, zrelaksować się w przygotowanej strefie chilloutu oraz wziąć udział w kilku konkursach.
-
-Bardzo dziękujemy wszystkim naszym kołowiczom zaangażowanym w projekt - bez was zorganizowanie festiwalu z takim rozmachem byłoby niemożliwe. Jesteście wspaniali!
+Więcej informacji o wydarzeniu można znaleźć na stronie [https://facebook.com/SFIkrakow](https://facebook.com/SFIkrakow).
