--- a/jekyll/_posts/2017-10-26-walne.markdown
+++ b/jekyll/_posts/2017-10-26-walne.markdown
@@ -1,6 +1,6 @@
 ---
 layout:	halfpage
-title:	Warsztaty - Git & Release management z GE Digital
+title:	Zebranie walne
 date:	   2017-10-26 19:30:29
 post_img_url: /images/walne.jpg
 language: pl
