finished microsoft post

--- a/jekyll/_posts/2018-10-18-microsoft_2018.markdown
+++ b/jekyll/_posts/2018-10-18-microsoft_2018.markdown
@@ -6,8 +6,6 @@ post_img_url: /images/microsoft_2018.jpg
 language: pl
 ---
 
-18 października odwiedziła nas firma Microsoft! 
-
-
+18 października odwiedziła nas firma Microsoft! John Socha, twórca pierwszego odświerzacza ekranu i Norton Commandera, opowiedział nam o praktycznych aspektach inżynierii oprogramowania przy pracy nad Azure. Azure to tworzona przez Microsoft platforma obliczeniowa w chmurze.
 
 Więcej zdjęć znajdziecie tutaj: https://www.facebook.com/ksi.uj/posts/2175757335791357
